--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Abfahrtmonitor</title>
-<meta http-equiv="refresh" content="10; URL=https://a.aseag.de/monitor_100011">
+<meta http-equiv="refresh" content="15; URL=https://a.aseag.de/monitor_100011">
 <meta name="keywords" content="automatic redirection">
 
 </head>
@@ -11,9 +11,9 @@
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
 -->
-<a href="https://a.aseag.de/monitor_100010"><button type="button">Misereor!</button></a>
-<a href="https://a.aseag.de/monitor_100011"><button type="button">Luisenhospital!</button></a>
-<a href="https://a.aseag.de/monitor_100012"><button type="button">Schanz!</button></a>
+<a href="https://a.aseag.de/monitor_100010"><button style="width:100px;height:100px;background:#ffffff;color:white" type="button">Misereor!</button></a>
+<a href="https://a.aseag.de/monitor_100011"><button style="width:100px;height:100px;background:#ffffff;color:white" type="button">Misereor!</button></a>
+<a href="https://a.aseag.de/monitor_100012"><button style="width:100px;height:100px;background:#ffffff;color:white" type="button">Misereor!</button></a>
 
 </body>
 </html>
