changed text color

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
 -->
-<a href="https://a.aseag.de/monitor_100010"><button style="width:300px;height:150px;background:#ffffff;color:white" type="button">Misereor!</button></a>
-<a href="https://a.aseag.de/monitor_100011"><button style="width:300px;height:150px;background:#ffffff;color:white" type="button">Misereor!</button></a>
-<a href="https://a.aseag.de/monitor_100012"><button style="width:300px;height:150px;background:#ffffff;color:white" type="button">Misereor!</button></a>
+<a href="https://a.aseag.de/monitor_100010"><button style="width:300px;height:150px;background:#000000;color:white" type="button">Misereor!</button></a>
+<a href="https://a.aseag.de/monitor_100011"><button style="width:300px;height:150px;background:#000000;color:white" type="button">Misereor!</button></a>
+<a href="https://a.aseag.de/monitor_100012"><button style="width:300px;height:150px;background:#000000;color:white" type="button">Misereor!</button></a>
 
 </body>
 </html>
